[package]
name = "reqwest-retry"
version = "0.1.0"
edition = "2024"

license-file = "LICENSE"

documentation = "https://claude.ai/chat/3a9efb03-642c-498c-a3b9-ef8f9fc6cb7c"

[dependencies]
thiserror = "~2.0"
tokio = { version = "~1.47", features = ["time"] }
pin-project-lite = "~0.2"
reqwest = "~0.12"
serde_json = "~1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "macros", "rt"] }
